@@ -32,7 +32,7 @@
     <File name="Resources/completion.py" subtype="Code" buildaction="EmbedAsResource" />
     <File name="PyBinding.Parser/PythonParser.cs" subtype="Code" buildaction="Compile" />
     <File name="PyBinding/PythonHelper.cs" subtype="Code" buildaction="Compile" />
-    <File name="gtk-gui/gui.stetic" subtype="Code" buildaction="EmbedAsResource" resource_id="gui.stetic" />
+    <File name="gtk-gui/gui.stetic" subtype="Code" buildaction="EmbedAsResource" />
     <File name="gtk-gui/generated.cs" subtype="Code" buildaction="Compile" />
     <File name="gtk-gui/PyBinding.Gui.PythonOptionsWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="PyBinding.Gui/PythonEditorCompletion.cs" subtype="Code" buildaction="Compile" />
